# SECOT_project

./: IoT_Sensor_ESP8266.ino  IoT_Sensor_ESP8266_README.md  IoT_Sensor_ESP8266_Wiring.md  README.md  SECOT_ESP_MQTT.ino
ESP_SECOT/: SECOT_ESP_MQTT.ino
IoT_Sensor_ESP8266/: IoT_Sensor_ESP8266.ino  README.md
SECOT_ESP_MQTT/: README.md  SECOT_ESP_MQTT.ino
Web_Dashboard_VICTIM/: .gitignore  README.md
Web_Dashboard_VICTIM/backend/: Cargo.toml
Web_Dashboard_VICTIM/backend/migrations/2023-11-01-000000_create_sensor_data/: down.sql  up.sql
Web_Dashboard_VICTIM/backend/src/: db.rs  main.rs  models.rs  schema.rs
Web_Dashboard_VICTIM/frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
Web_Dashboard_VICTIM/frontend/src/: App.jsx  index.css
Web_Dashboard_VICTIM/frontend/src/components/: ApiClient.jsx  DarkModeToggle.jsx  MqttClient.jsx  SensorPanel.jsx  WebSocketClient.jsx
Web_Dashboard_VICTIM/tools/: mqtt_publisher.py  mqtt_test.py  setup_database.bat  setup_database.sh
Web_Interface_SECOT/: README.md  run-dev.bat
Web_Interface_SECOT/backend/: Cargo.toml
Web_Interface_SECOT/backend/src/: api.rs  main.rs  models.rs  mqtt.rs  ws.rs
Web_Interface_SECOT/frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs
Web_Interface_SECOT/frontend/src/: App.tsx  index.css
Web_Interface_SECOT/frontend/src/components/: Charts.tsx  ControlPanel.tsx  Dashboard.tsx  DataTable.tsx  (+1 more)
Web_Interface_SECOT/tests/: README.md  api_test.py  conftest.py  report.html  run_tests.py  test_helpers.py  test_ui_pytest.py  ui_test.py
(+1 files in other folders)
