[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["ws"] }
tokio = { version = "1.35.1", features = ["full"] }
rumqttc = "0.23.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-extra = { version = "0.9.0", features = ["typed-routing"] }
chrono = { version = "0.4.31", features = ["serde"] }
once_cell = "1.19.0"
futures-util = { version = "0.3.30", features = ["sink"] }
